// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlagProvider> tests enter loading state during Flagger initialization (children function) 1`] = `
<div>
  Loading...
</div>
`;

exports[`<FlagProvider> tests enter loading state during Flagger initialization (loadingView prop) 1`] = `
<div>
  Loading...
</div>
`;

exports[`<FlagProvider> tests renders children when not in loading state 1`] = `
<div>
  42
</div>
`;
